[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/structure/back.png" type="Texture" id=1]
[ext_resource path="res://assets/Misc/Font.tres" type="DynamicFont" id=2]
[ext_resource path="res://scenes/MainMenu/LooserBoard/looserboard.gd" type="Script" id=3]


[node name="looserboard" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Congrats" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -600.0
margin_top = -296.0
margin_right = 596.0
margin_bottom = -95.0
custom_fonts/font = ExtResource( 2 )
text = "Congratulations on making it to the end!

You can save your score here
If you want you can make your score
higher by playing stage 1 levels multiple times"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 352.0
margin_top = 256.0
margin_right = 573.0
margin_bottom = 310.0
custom_fonts/font = ExtResource( 2 )
text = "Go Back"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnotherDifficulty" type="Button" parent="."]
margin_left = 96.0
margin_top = 616.0
margin_right = 797.0
margin_bottom = 670.0
custom_fonts/font = ExtResource( 2 )
text = "Choose another Difficulty"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveScore" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -152.0
margin_top = 112.0
margin_right = 153.0
margin_bottom = 166.0
custom_fonts/font = ExtResource( 2 )
text = "Save Score"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameDialog" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WhatsYourName" type="RichTextLabel" parent="NameDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -344.0
margin_top = -264.0
margin_right = 344.0
margin_bottom = -100.0
custom_fonts/normal_font = ExtResource( 2 )
text = "You can save your score!
What's your name?"

[node name="NameInput" type="LineEdit" parent="NameDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -216.0
margin_top = -48.0
margin_right = 221.0
margin_bottom = 44.0
custom_fonts/font = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SubmitScoreButton" type="Button" parent="NameDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -88.0
margin_top = 96.0
margin_right = 96.0
margin_bottom = 150.0
custom_fonts/font = ExtResource( 2 )
text = "Submit"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Leave" type="Button" parent="NameDialog"]
margin_left = 1040.0
margin_top = 576.0
margin_right = 1201.0
margin_bottom = 630.0
custom_fonts/font = ExtResource( 2 )
text = "Leave"
flat = true
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="AnotherDifficulty" to="." method="_on_AnotherDifficulty_pressed"]
[connection signal="pressed" from="SaveScore" to="." method="_on_SaveScore_pressed"]
[connection signal="pressed" from="NameDialog/SubmitScoreButton" to="." method="_on_SubmitScoreButton_pressed"]
[connection signal="pressed" from="NameDialog/Leave" to="." method="_on_Leave_pressed"]
